corrected typo of org-babel

--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 Bindings for [[https://orgmode.org/worg/org-contrib/babel/][org-babel]] support for [[https://raku.org/][Raku]] (née Perl6).
 
 ** Usage
-Same as other org-babble things. In most cases you'll want to be sure to include =:results output= in your =+begin_src= line.
+Same as other org-babel things. In most cases you'll want to be sure to include =:results output= in your =+begin_src= line.
 
 #+begin_src org-mode
 
